@@ -27,6 +27,8 @@ DIST genpatches-3.3-4.base.tar.bz2 116802 RMD160 32b9f8eb85089656f6a1e3904c0e4d9
 DIST genpatches-3.3-4.extras.tar.bz2 17205 RMD160 eb3141c66ffb16282c2e2ef0fb5227a13172464d SHA1 4376fe5995aaa058cdd9081c003aeef56d099b5e SHA256 9356a196eb8aa74110165bc9d04674785693393c34f4a088d60bb0091ceb1bdc
 DIST genpatches-3.3-5.base.tar.bz2 138337 RMD160 b467091a5b1242da46280e2190aa0cb0fe0f9571 SHA1 afad24b7484163c2de116065bf4f2a97ec4e8b71 SHA256 6b9f19e91db0b2f612be6a3815be4ebcd2193ca3afefdc62de3302576838ee07
 DIST genpatches-3.3-5.extras.tar.bz2 17205 RMD160 eb3141c66ffb16282c2e2ef0fb5227a13172464d SHA1 4376fe5995aaa058cdd9081c003aeef56d099b5e SHA256 9356a196eb8aa74110165bc9d04674785693393c34f4a088d60bb0091ceb1bdc
+DIST genpatches-3.3-6.base.tar.bz2 159919 RMD160 dc0098f7bca982371293992e59dfbadfe201714c SHA1 9b60161fc26849d9c5761321402e8eabecf22df3 SHA256 4dcd1ebef4f0cd788f2db247b448657936a4ab9109843057489191ccf004e5da
+DIST genpatches-3.3-6.extras.tar.bz2 17205 RMD160 eb3141c66ffb16282c2e2ef0fb5227a13172464d SHA1 4376fe5995aaa058cdd9081c003aeef56d099b5e SHA256 9356a196eb8aa74110165bc9d04674785693393c34f4a088d60bb0091ceb1bdc
 DIST linux-3.0.tar.bz2 76753134 RMD160 e20c9564ec0c8128e28a4c038986d4d93bbe34bb SHA1 45b64bffc860f70ab7956da4493c488010714650 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0
 DIST linux-3.1.tar.bz2 77190238 RMD160 f9a3ce57b9f20a1402ef340792d3c223140ce1d2 SHA1 ac792701561b1cd4279302b8bb8f474731762ad1 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359
 DIST linux-3.2.tar.bz2 78147838 RMD160 15eb022305dfc8b0e1d59e396911fa86eb9c3bdf SHA1 3460afa971049aa79b8f914e1bfd619eedd19f55 SHA256 c881fc2b53cf0da7ca4538aa44623a7de043a41f76fd5d0f51a31f6ed699d463
@@ -38,12 +40,13 @@ EBUILD lh-sources-3.3.0.ebuild 927 RMD160 78b1e322d366de0393cd29c65c1abd4ed80ec0
 EBUILD lh-sources-3.3.2.ebuild 927 RMD160 8812c4ae9ac4af075757c996b883de27619afa83 SHA1 bc130f8dc323ab135e850961bb13d878d503cc92 SHA256 61248830d30060260c78b933df128fed2ab6dceb88edd49cfcddf01078eec074
 EBUILD lh-sources-3.3.3.ebuild 927 RMD160 eb4c5727837609e731791627c9439c9645d82b59 SHA1 5704fa2b7ae01464968349372e574fcefd039b24 SHA256 a70e9d03bdce7dcd52bb47bc811af1b0e424a7e057a723294f01e7471ba0225f
 EBUILD lh-sources-3.3.4.ebuild 927 RMD160 7ba6d7a308fca3200681b5d6eea59f088f9086e3 SHA1 e8d678e11b2463fe2d874b20f36d0519aea7891a SHA256 92b1d460500ae0be85ba7c2f31e8d454729bf08360d4c16993c72975afcdfa38
-MISC ChangeLog 9740 RMD160 6b9ccfeca3384319215765b5da7ac17dde65f92f SHA1 1f19a8c60caa7314d94a62137f0188ed1f5e8bf3 SHA256 d68547888ccab5b16b5c77b75507f4011646f4b82c7c887da3f5c1184cb32f74
+EBUILD lh-sources-3.3.5.ebuild 927 RMD160 78215506aacb0e6ffa78a02be46d3451a690e6ab SHA1 75c21562317cd8757b0fbb4d72e339222ed3431d SHA256 0b3abcfd0de84f5a766fb94f4d6cda0c9f50e554b044f25468a4161a6e58d24f
+MISC ChangeLog 9862 RMD160 4ade28137bb6987920b70638cfea5b3c31e5c119 SHA1 73f4b63667f50293c3eb68935129b85f69fbd99c SHA256 a29330f1c1fa5741df7b4b3ff664500f3c3e6763ae1ac3f03027fb8a4799eb2e
 MISC metadata.xml 322 RMD160 a52cf0e8c44c43c1e00f471819402a7c285d556b SHA1 de7633ea96633b285db9a303a5e390816f17b991 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAk+biMMACgkQgAnW8HDreRbVIACgu6/CiK9doHL3FH5eVApkUOtJ
-buwAnRc/hHkResz4DpiTKnQjgM9rUJSX
-=35dA
+iEYEAREKAAYFAk+uEBkACgkQgAnW8HDreRYcQQCaAl2IXPIYl2V0O7SckfpaVx+z
+XMcAoIkvaU4oID5Qj5CMhsj/Faf+4+vs
+=ONRF
 -----END PGP SIGNATURE-----
